<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eventAdminButton"
        android:layout_width="250dp"
        android:layout_height="43dp"
        android:background="@drawable/admin_buttons"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/events"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/accountAdminButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/admin_buttons"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/accounts"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventAdminButton"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/imagesAdminButton"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/admin_buttons"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/images"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountAdminButton"
        app:layout_constraintVertical_bias="0.059" />


</androidx.constraintlayout.widget.ConstraintLayout>

